# torchium

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_README.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  README.md  SECURITY.md  deploy_docs.sh  deploy_docs_fixed.sh  deploy_docs_simple.sh  deploy_manual.sh  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  serve_docs.py  setup.py  setup_cython.py
.doctrees/: index.doctree
.doctrees/api/: losses.doctree  optimizers.doctree
.doctrees/examples/: benchmarks.doctree  computer_vision.doctree  generative_models.doctree  nlp.doctree  optimization_comparison.doctree
.doctrees/tutorials/: advanced_usage.doctree  cuda_integration.doctree  cython_optimizations.doctree  domain_specific_usage.doctree  performance_guide.doctree  quickstart.doctree
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  release.yml
_modules/: index.html
_modules/torch/nn/modules/: adaptive.html  loss.html
_modules/torch/optim/: nadam.html  rprop.html
_modules/torchium/losses/: domain_specific.html
_modules/torchium/losses/classification/: cross_entropy.html  margin_based.html
_modules/torchium/losses/computer_vision/: detection.html  segmentation.html  style_transfer.html  (+1 more)
_modules/torchium/optimizers/: experimental.html  meta_optimizers.html  second_order.html
_sources/: index.rst.txt
_sources/api/: losses.rst.txt  optimizers.rst.txt
_sources/examples/: benchmarks.rst.txt  computer_vision.rst.txt  generative_models.rst.txt  nlp.rst.txt
_sources/tutorials/: advanced_usage.rst.txt  domain_specific_usage.rst.txt  performance_guide.rst.txt  quickstart.rst.txt
_static/: custom.css
api/: losses.html  optimizers.html
examples/: benchmarks.html  computer_vision.html  generative_models.html  nlp.html  optimization_comparison.html
production/: MANIFEST.in
recipies/: Test_all_fixes.py  Test_cython.py  Test_cython_simple.py  VERIFICATION_SUMMARY.md  recipies_list.md  verify_fixes.py
torchium/: __init__.py  py.typed  pytest.ini
torchium/benchmarks/: __init__.py  optimizer_benchmark.py  quick_benchmark.py
torchium/docs/source/: conf.py  index.rst
torchium/losses/: __init__.py
torchium/losses/classification/: __init__.py  cross_entropy.py  margin_based.py  ranking.py
torchium/losses/computer_vision/: __init__.py  detection.py  segmentation.py  style_transfer.py  super_resolution.py
torchium/losses/domain_specific/: __init__.py
torchium/losses/generative/: __init__.py
torchium/losses/metric_learning/: __init__.py
torchium/losses/multi_task/: __init__.py
torchium/losses/nlp/: __init__.py
torchium/losses/regression/: __init__.py  mse_variants.py  robust.py
torchium/optimizers/: __init__.py
torchium/optimizers/adaptive/: __init__.py  adagrad_variants.py  adam_variants.py  rmsprop_variants.py
torchium/optimizers/experimental/: __init__.py
torchium/optimizers/meta_optimizers/: __init__.py
torchium/optimizers/momentum/: __init__.py  momentum_methods.py  sgd_variants.py
torchium/optimizers/second_order/: __init__.py  adahessian.py  kfac.py  lbfgs.py  natural_gradient.py  shampoo.py
torchium/optimizers/specialized/: __init__.py  computer_vision.py  distributed.py  general.py  nlp.py  sparse.py
torchium/tests/: conftest.py
torchium/tests/unit/: test_losses.py  test_optimizers.py
torchium/utils/: README.md  __init__.py  compatibility.py  cuda_kernels.py  cython_ops.pyx  cython_wrapper.py  factory.py  registry.py  validation.py
tutorials/: advanced_usage.html  cuda_integration.html  cython_optimizations.html  domain_specific_usage.html  performance_guide.html  quickstart.html
(+21 files in other folders)
